--- a/cookmate-backend/package.json
+++ b/cookmate-backend/package.json
@@ -1,12 +1,13 @@
 {
   "name": "cookmate-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "CookMate backend API",
+  "main": "src/index.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "test": "echo \"No tests configured\" && exit 0"
   },
   "keywords": [],
   "author": "",
@@ -22,5 +23,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
