--- a/cookmate-backend/package.json
+++ b/cookmate-backend/package.json
@@ -7,7 +7,11 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "echo \"No tests configured\" && exit 0"
+    "test": "echo \"No tests configured\" && exit 0",
+    "backup:recipes": "node scripts/backupRecipes.js",
+    "update:steps:dry": "node scripts/updateAllRecipesSteps.js --dry",
+    "update:steps": "node scripts/updateAllRecipesSteps.js",
+    "update:steps:force": "node scripts/updateAllRecipesSteps.js --force"
   },
   "keywords": [],
   "author": "",
