--- a/cookmate-backend/package.json
+++ b/cookmate-backend/package.json
@@ -11,7 +11,9 @@
     "backup:recipes": "node scripts/backupRecipes.js",
     "update:steps:dry": "node scripts/updateAllRecipesSteps.js --dry",
     "update:steps": "node scripts/updateAllRecipesSteps.js",
-    "update:steps:force": "node scripts/updateAllRecipesSteps.js --force"
+    "update:steps:force": "node scripts/updateAllRecipesSteps.js --force",
+    "autotag:dry": "node scripts/autoTagAllergens.js --dry",
+    "autotag:write": "node scripts/autoTagAllergens.js --write"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +25,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
-    "natural": "^8.1.0"
+    "natural": "^8.1.0",
+    "openai": "^6.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
